--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,7 @@ jobs:
         sudo singularity build textfooler.sif singularity.def
 
     - name: Login to GHCR
-      run: echo ${{ secrets.GITHUB_TOKEN }} | docker login ghcr.io -u USERNAME --password-stdin
+      run: echo ${{ secrets.GITHUB_TOKEN }} | docker login ghcr.io -u ${{ github.repository_owner }} --password-stdin
 
     - name: Push Image to GitHub Packages
-      run: docker push ghcr.io/USERNAME/my_container.sif
+      run: docker push ghcr.io/${{ github.repository_owner }}/textfooler.sif
