--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,5 +25,5 @@ jobs:
       run: echo ${{ secrets.GITHUB_TOKEN }} | docker login ghcr.io -u ${{ github.repository_owner }} --password-stdin
 
     - name: Push Image to GitHub Packages
-      run: docker push ghcr.io/${{ github.repository_owner }}/text-fooler.sif
+      run: docker push ghcr.io/redhawk18/text-fooler.sif
 
