--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -17,9 +17,13 @@ jobs:
         wget https://github.com/sylabs/singularity/releases/download/v3.11.1/singularity-ce_3.11.1-jammy_amd64.deb
         sudo apt-get install -y ./singularity-ce_3.11.1-jammy_amd64.deb
 
-    - name: Build Singularity Image
+    # - name: Build Singularity Image
+    #   run: |
+    #     sudo singularity build text-fooler.sif singularity.def
+
+    - name: TEST Build Singularity Image
       run: |
-        sudo singularity build text-fooler.sif singularity.def
+        touch text-fooler.sif
 
     - name: Login to GHCR
       run: echo ${{ secrets.GITHUB_TOKEN }} | docker login ghcr.io -u ${{ github.repository_owner }} --password-stdin
