--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -25,5 +25,5 @@ jobs:
       run: echo ${{ secrets.GITHUB_TOKEN }} | docker login ghcr.io -u ${{ github.repository_owner }} --password-stdin
 
     - name: Push Image to GitHub Packages
-      run: docker push ghcr.io/redhawk18/text-fooler/text-fooler:v1.0
+      run: singularity push textfooler.sif oras://ghcr.io/redhawk18/text-fooler/text-fooler
 
