--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -20,6 +20,7 @@ jobs:
     - name: Build Singularity Image
       run: |
         sudo singularity build text-fooler.sif singularity.def
+        ls -lah
 
     - name: Login to GHCR
       run: echo ${{ secrets.GITHUB_TOKEN }} | docker login ghcr.io -u ${{ github.repository_owner }} --password-stdin
