--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -23,7 +23,7 @@ jobs:
         ls -lah
 
     - name: Login to GHCR
-      run: echo ${{ secrets.GITHUB_TOKEN }} | docker login ghcr.io -u ${{ github.repository_owner }} --password-stdin
+      run: echo ${{ secrets.TOKEN }} | docker login ghcr.io -u ${{ github.repository_owner }} --password-stdin
 
     - name: Push Image to GitHub Packages
       run: singularity push textfooler.sif oras://ghcr.io/redhawk18/text-fooler/text-fooler
