--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Containers and HPC
+build/
 *.sif
 slurm-*.out
+# Converted notebooks to python
+*.py
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
